# Projeto_DEVOPS_INATEL

./: .gitignore  Jenkinsfile  README.md  calculadora.py  dockerfile  pyproject.toml  requirements.txt  script.sh  supermercadoMain.py  test_main.py  teste_calc.py
.github/workflows/: python-app.yml
Artefatos/: TestResults___main__.TesteSupermercado_2023-05-27_01-52-06.html
