[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "supermercadoGABRIELMMART"
version = "0.0.1"
authors = [
  { name="Gabriel", email="gabriel.medeiros@ges.inatel.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gabrielmmart/supermercado_C214-S107"
"Bug Tracker" = "https://github.com/gabrielmmart/supermercado_C214-S107"